[package]
name = "yew_password_generator"
version = "0.1.0"
authors = ["David"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlInputElement',
  'HtmlButtonElement',
  'HtmlElement',
  'MouseEvent',
  'NodeList'
]

[lib]
crate-type =["cdylib"]